# agentbuilder-hw2-rubygunna-multi-db-agent

./: .env.example  .gitignore  README.md  SPEC.md  check_connectivity.py  pyproject.toml
backend/: agent.py  config.py  main.py
backend/db/: mongo.py  postgres.py
backend/seed/: handbook_docs.py  seed_handbook.py  seed_mongo.py  seed_postgres.py
backend/tools/: handbook_tool.py  mongo_tool.py  sql_tool.py
docs/superpowers/plans/: 2026-05-17-multi-db-agent.md
docs/superpowers/specs/: 2026-05-17-multi-db-agent-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Landing.tsx  api.ts  index.css
frontend/src/components/: ChatPanel.tsx  ToolTrace.tsx
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_handbook_integration.py  test_mongo_integration.py  test_sql_integration.py
tests/unit/: test_handbook_tool.py  test_mongo_tool.py  test_sql_tool.py
