[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Multi-DB Electronics Store AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.6",
    "langchain-community>=0.0.38",
    "openai>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
